# rust-openai-client

./: Cargo.toml  README.md
src/: main.rs
